# managing-the-size-of-rust-binaries

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile
anecdotes/: optimizing-hello-syslog.md
apps/hello-syslog/crates/: Cargo.toml
apps/hello-syslog/crates/src/: main.rs
apps/hello-syslog/dce/: Cargo.toml
apps/hello-syslog/dce/src/: acap_logging.rs  main.rs
apps/hello-syslog/features/: Cargo.toml
apps/hello-syslog/naive/: Cargo.toml
apps/hello-world/naive/: Cargo.toml
apps/hello-world/naive/src/: main.rs
results/: the-size-of-apps-on-different-targets.txt  the-size-of-hello-syslog-on-aarch64.txt
